# tunnel-raiders

./: .gitattributes  .gitignore  Cargo.toml  clippy.toml
assets/: drill-icon.xcf  wall.blend  wall.glb  wall.gltf
assets/buildings/: building-menu.xcf  depot.blend  depot.glb  depot.gltf
assets/buildings/assets/materials/gravel_embedded__b08d4521-536b-4a2a-b0a0-bfb1f1b73b57/: gravel_embedded_concrete_2K_3e9c8b36-1629-4823-ae82-ee21990d9478.blend
assets/buildings/assets/materials/wood_3a10b28c-a7ae-44d3-a67a-04a41d00dbf9/: wood_26d8ee77-fcc2-4f43-a4e6-37bf11c260c0.blend
assets/resources/: ore.blend  ore.gltf
assets/resources/assets/materials/gravel-freepoly__e6eb7c42-45da-4f1b-9fe7-7e281ccbec64/: gravel-freepoly_org_2K_d88caf38-ed76-4f08-90c7-e6a501515058.blend
assets/textures/: rock_08_nor_gl_1k.exr  rock_08_nor_gl_4k.exr
src/: camera_control.rs  debug_text.rs  depot_building.rs  game_level.rs  game_level_render.rs  grid.rs  health.rs  main.rs  mesh_generation.rs  move_to_position_task.rs  nav_mesh_debug.rs  path_finding.rs  prelude.rs  ray_hit_helpers.rs  selection.rs  tasks.rs  walk_raider_to_target.rs
src/buildings/: building.rs  building_menu.rs  depot_building.rs  mod.rs
src/errands/: errand_queue.rs  errands_v2.rs  mine_wall_errand.rs  mod.rs  move_to_position_errand.rs  sleep_errand.rs
src/gizmos/: button_gizmo.rs  designation_gizmo.rs  menu_gizmo.rs  mod.rs
src/raider_control/: mine_wall.rs  mod.rs  walk_raider_to_target.rs
src/tasks/: mine_wall_task.rs  mod.rs  move_to_position_task.rs  sleep_task.rs  task_queue.rs
