[package]
name = "tunnel-raiders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.10", features = ["jpeg", "exr"]}
bevy_ecs = "0.10"
leafwing-input-manager = "0.9"
bevy_hanabi = { version = "0.6", default-features = false, features = ["3d"] }
bevy_rapier3d = { version = "0.21", features = ["simd-stable", "parallel", "debug-render-3d"] }
serde = "1.0"
serde_json = "1.0"
schemars = { version = "0.8", features = ["preserve_order", "derive"] }
anyhow = "1.0"
bevy_asset_loader = { version = "0.16.0", features = ["3d"] }
bevy_editor_pls = "0.4.0"
oxidized_navigation = "0.5.2"
bevy_prototype_debug_lines = { version = "0.10", features = ["3d"]}

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
